Revision history for Perl extension PGXN::API

0.6.2
      - Search requests go to /search instead of /by. The latter is used for
        metadata files.

0.6.1   2011-03-26T04:12:42
      - Fixed error in indexer for distributions with no tags.
      - Fixed "Use of uninitialized value in subroutine entry" warnings from
        the full text indexer in PGXN::API::Indexer.
      - Fixed user name in distribution full text index so that it's not the
        same name for all users.

0.6.0   2011-03-26T03:14:12
      - The /src directory is now served with Plack::App::Directory, so that a
        listing of the files in a directory will be presented. Elsewhere,
        directory requests return a 404.
      - Added full-text search indexing. Requests go to /by.

0.5.5   2011-03-17T23:07:43
      - Changed doc JSON to have a hash for each value: a title and an
        abstract (if there is one).

0.5.4   2011-03-17T00:08:30
      - Updated to work with new default URI templates deployed in
        PGXN::Manager 0.10.2.

0.5.3  2011-03-16T03:16:27
      - Changed doc template to use `{+path}` instead of `{doc}`, so that
        slashes will not be encoded. This isn't strictly-speaking supported by
        URI::Template yet, so for now we set the variable as `+path` and
        prevent URI::Escape from escaping slashes.

0.5.2   2011-03-15T22:23:56
      - HTML documents are now properly written out at UTF-8, instead of as
        raw bytes.
      - The doc parser no longer autovivifies doc file names into the
        "provides" has of the version metadata file.

0.5.1   2011-03-15T21:44:07
      - The sync code now updates the mirror meta after `rsync`ing but before
        doing anything else. It was fetching a template first, and this caused
        errors on the first sync because the `index.json` had not yet been
        copied to the document root.

0.5.0   2011-03-15T21:24:59
      - The URI templates are now read from the doc root rather than the